--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
       <header class="container">
         <h1>jake quits.</h1>
         <p>
-          <a href="https://twitter.com/jake_albaugh" target="blank"
-            >jake albaugh</a
-          >
+          <a href="https://jake.fun">jake albaugh</a>
           quit nicotine. this is helping him along the way.
         </p>
       </header>
@@ -149,15 +147,14 @@
               Risk of coronary heart disease is back to that of a nonsmoker’s.
             </p>
           </div>
-          <p style="text-align: center;">
+          <p style="text-align: center">
             <small
               ><a
                 href="https://www.cdc.gov/tobacco/data_statistics/sgr/2004/posters/20mins/index.htm"
-                target="blank"
                 >cdc.gov</a
               >
               |
-              <a href="https://github.com/jakealbaugh/jake-quits" target="blank"
+              <a href="https://github.com/jakealbaugh/jake-quits"
                 >GitHub</a
               ></small
             >
