--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <meta name="og:url" content="https://jakequits.com" />
     <meta name="og:site_name" content="Jake Quits" />
     <meta name="og:type" content="website" />
+    <meta id="theme" name="theme-color" content="black">
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
