--- a/index.html
+++ b/index.html
@@ -8,25 +8,17 @@
     <title>Jake Quits</title>
     <meta
       name="description"
-      content="jake albaugh quit nicotine. this is helping them along the way."
+      content="jake quit nicotine. this is helping them along the way."
     />
     <meta itemprop="name" content="Jake Quits" />
     <meta
       itemprop="description"
-      content="jake albaugh quit nicotine. this is helping them along the way."
+      content="jake quit nicotine. this is helping them along the way."
     />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Jake Quits" />
-    <meta
-      name="twitter:description"
-      content="jake albaugh quit nicotine. this is helping them along the way."
-    />
-    <meta name="twitter:site" content="@jake_albaugh" />
-    <meta name="twitter:creator" content="@jake_albaugh" />
     <meta name="og:title" content="Jake Quits" />
     <meta
       name="og:description"
-      content="jake albaugh quit nicotine. this is helping them along the way."
+      content="jake quit nicotine. this is helping them along the way."
     />
     <meta name="og:url" content="https://jakequits.com" />
     <meta name="og:site_name" content="Jake Quits" />
