--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       name="og:description"
       content="jake quit nicotine. this is helping them along the way."
     />
-    <meta name="og:url" content="https://jakequits.com" />
+    <meta name="og:url" content="https://www.jakequits.com" />
+    <meta property="og:image" content="https://www.jakequits.com/image.png" />
     <meta name="og:site_name" content="Jake Quits" />
     <meta name="og:type" content="website" />
     <meta id="theme" name="theme-color" content="black" />
