--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 >cdc.gov</a
               >
               |
-              <a href="https://github.com/jakealbaugh/jake-quits">GitHub</a>
+              <a href="https://github.com/ja-k-e/jake-quits">GitHub</a>
               |
               <a href="https://jake.fun">jake.fun</a>
             </small>
